--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,54 +1,49 @@
-    <nav class="navbar navbar-expand-lg gradient-bg sticky-top" [class.glassmorphism]="isScrolled">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <i class="fas fa-gem me-2"></i>
-          ClassyShop
-        </a>
-        
-        <button 
-          class="navbar-toggler" 
-          type="button" 
-          (click)="toggleNavbar()"
-          [attr.aria-expanded]="!isNavbarCollapsed"
-          [class.navbar-toggler-active]="!isNavbarCollapsed">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="navbar navbar-expand-lg gradient-bg sticky-top" [class.glassmorphism]="isScrolled">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <i class="fas fa-gem me-2"></i>
+      ClassyShop
+    </a>
+    
+    <button 
+      class="navbar-toggler" 
+      type="button" 
+      (click)="toggleNavbar()"
+      [attr.aria-expanded]="!isNavbarCollapsed"
+      [class.navbar-toggler-active]="!isNavbarCollapsed">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" 
-             [class.show]="!isNavbarCollapsed && isMobile"
-             [class.collapsing]="isAnimating && isMobile"
-             [style.display]="isMobile ? (!isNavbarCollapsed ? 'block' : 'none') : null"
-             [class.mobile-menu]="isMobile">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item" *ngFor="let item of menuItems; let i = index">
-              <a class="nav-link text-white" 
-                 [href]="item.href"
-                 [class.active]="item.active"
-                 [style.animation-delay]="(i * 0.1) + 's'"
-                 (click)="setActiveMenuItem(i)">
-                <i [class]="item.icon + ' me-2'"></i>
-                {{ item.label }}
-              </a>
-            </li>
-          </ul>
-          
-          <div class="d-flex align-items-center mobile-actions">
-            <button class="btn btn-outline-light me-3">
-              <i class="fas fa-search"></i>
-            </button>
-            <button class="btn btn-outline-light me-3 position-relative">
-              <i class="fas fa-heart"></i>
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                3
-              </span>
-            </button>
-            <button class="btn btn-outline-light position-relative">
-              <i class="fas fa-shopping-cart"></i>
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                2
-              </span>
-            </button>
-          </div>
-        </div>
+    <div class="collapse navbar-collapse" 
+         [class.show]="!isNavbarCollapsed && isMobile"
+         [class.collapsing]="isAnimating && isMobile"
+         [style.display]="isMobile ? (!isNavbarCollapsed ? 'block' : 'none') : null"
+         [class.mobile-menu]="isMobile">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item" *ngFor="let item of menuItems; let i = index">
+          <a class="nav-link text-white" 
+             [href]="item.href"
+             [class.active]="item.active"
+             [style.animation-delay]="(i * 0.1) + 's'"
+             (click)="setActiveMenuItem(i)">
+            <i [class]="item.icon + ' me-2'"></i>
+            {{ item.label }}
+          </a>
+        </li>
+      </ul>
+      
+      <div class="d-flex align-items-center mobile-actions">
+        <button class="btn btn-outline-light me-3">
+          <i class="fas fa-search"></i>
+        </button>
+        <button class="btn btn-outline-light me-3 position-relative">
+          <i class="fas fa-heart"></i>
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+            3
+          </span>
+        </button>
+        <app-shop-car></app-shop-car>
       </div>
-    </nav>
+    </div>
+  </div>
+</nav>
